more hotfixes with handler
