# transport/rest/v1/logs.go
@@ -3,14 +3,15 @@ package v1
 import (
 	"github.com/gin-gonic/gin"
 	"net/http"
+	"userLoggingProject/pkg/logger"
 	"userLoggingProject/transport/rest/v1/requests"
 )
 
 func (h *Handler) initLogRoutes(api *gin.RouterGroup) {
 	logs := api.Group("/logs")
 	{
-		logs.GET("/all/:id", h.getAll)
-		logs.GET("/:id:logId", h.getById)
+		logs.GET("/:id", h.getAll)
+		logs.POST("/getById/", h.getById)
 		logs.DELETE("/:id", h.removeAll)
 		logs.POST("/", h.add)
 	}
@@ -21,11 +22,12 @@ func (h *Handler) initLogRoutes(api *gin.RouterGroup) {
 // @Description  get all user logs
 // @Accept  json
 // @Produce  json
+// @Param id path string true "id"
 // @Success 200 {array}  LogEntry.LogEntry
 // @Failure 400,404 {object} response
 // @Failure 500 {object} response
 // @Failure default {object} response
-// @Router /logs/ [get]
+// @Router /logs/{id} [get]
 func (h *Handler) getAll(c *gin.Context) {
 	logs, err := h.services.Logs.GetAll(c.GetString("id"))
 	if err != nil {
@@ -37,26 +39,32 @@ func (h *Handler) getAll(c *gin.Context) {
 	c.JSON(http.StatusOK, dataResponse{Data: logs})
 }
 
-// @Summary Get Logs By UserId
+// @Summary Get Log By id
 // @Tags logs
-// @Description  get logs by userId
+// @Description  get log by id
 // @Accept  json
 // @Produce  json
-// @Param id path int true "id"
-// @Success 200 {array}  LogEntry.LogEntry
+// @Param body body requests.GetByIdRequest true "id"
+// @Success 200 {object}  LogEntry.LogEntry
 // @Failure 400,404 {object} response
 // @Failure 500 {object} response
 // @Failure default {object} response
-// @Router /logs/{id}{logId} [get]
+// @Router /logs/getById [post]
 func (h *Handler) getById(c *gin.Context) {
-	order, err := h.services.Logs.GetById(c.GetString("id"), c.GetInt("logId"))
+	var request requests.GetByIdRequest
+	if err := c.BindJSON(&request); err != nil {
+		newResponse(c, http.StatusBadRequest, "invalid input body")
+
+		return
+	}
+	log, err := h.services.Logs.GetById(request.UserId, request.LogId)
 	if err != nil {
 		newResponse(c, http.StatusInternalServerError, err.Error())
 
 		return
 	}
 
-	c.JSON(http.StatusOK, dataResponse{Data: order})
+	c.JSON(http.StatusOK, dataResponse{Data: log})
 }
 
 // @Summary Remove All User Logs
@@ -96,7 +104,7 @@ func (h *Handler) add(c *gin.Context) {
 	var request requests.AddLogRequest
 	if err := c.BindJSON(&request); err != nil {
 		newResponse(c, http.StatusBadRequest, "invalid input body")
-
+		logger.Error(err)
 		return
 	}
 	logId, err := h.services.Logs.AddLog(request.UserId, &request.Log)
